content/views/ui.threadview.css
/*
Author: cf AUTHORS.txt
License:  Copyright (c) 2010-2012 Massachusetts Institute of Technology.
          MIT License (cf. MIT-LICENSE.txt or http://www.opensource.org/licenses/mit-license.php)
*/


div.threadview
{
    overflow-y: auto;
}

div.threadview-branch
{
    padding-top: 5px;
    padding-left: 10px;
}

div.threadview-branch > div.threadview-branch
{
    border-left: 1px solid #ddd;
}

div.threadview div.lens-odd
{
    background-color: #f0f0f0;
}

div.threadview-pane
{
    padding-right: 8px;
    padding-bottom: 20px;

    border-width: 0 1px 0 1px;
    border-style: solid;
    border-color: #ddd;
}



div.threadview div.note-lens
{
    padding-top: 5px;
    padding-bottom: 5px;

    border: thin solid transparent;
    border-right-width: 5px;
}


div.threadview div.note-lens.replyrequested
{
    border-right: 5px solid #ffa070;
}

div.threadview div.note-lens:hover
{
    background-color: #ffffec;
}

div.threadview span.note-bold
{
    font-weight: bold;

    color: #000;
}

.authorship-info .nbicon
{
    vertical-align: sub;
}

div.threadview span.author
{
    font-style: italic;

    margin-left: 10px;

    color: #a0a0a0;
}

.author-revealed
{
    text-decoration: line-through;
}

div.threadview span.created
{
    color: #a0a0a0;
}

div.threadview div.commentlabel_container
{
    position: absolute;
    z-index: 0;
    right: 42px;

    margin-top: 0;
    padding: 5px;

    opacity: .2;
    border: thin solid transparent;
}

div.threadview div.commentlabel_container:hover
{
    z-index: 3;

    opacity: 1.0;
    color: #303030;
    border-color: #a0a0a0;
    background-color: #fbfbfb;
}


div.threadview  span.cat_elt
{
    margin-right: 5px;
    margin-left: 5px;
    padding: 3px;

    cursor: pointer;

    border: thin solid transparent;
    -webkit-border-radius: 5px;
       -moz-border-radius: 5px;
}

div.threadview  span.cat_elt.selected
{
    color: #fff;
    border-color: #777;
    background-color: #70a0f0;
}

div.threadview  span.cat_elt:hover
{
    background-color: #ffffd0;
}


div.threadview div.cat_name
{
    display: inline-block;

    width: 60px;
}


div.threadview div.stat-count
{
    font-weight: bold;

    display: inline-block;

    padding: 1px 8px 1px 0;

    vertical-align: bottom;

    color: #707070;
    background-color: #eee;
}

div.threadview div.stat-count .nbicon
{
    margin-top: -2px;

    vertical-align: bottom;
}

div.threadview div.stat-count.active
{
    color: #f0f0f0;
    background-color: #70a0f0;
}

div.threadview div.stat-count.active .nbicon
{
    background-image: url('/content/data/icons/png/theme_light.png');
}

div.threadview div.lensmenu
{
    float: right;

    padding: 5px;

    opacity: .3;
}

div.threadview div.note-lens:hover div.lensmenu
{
    opacity: 1.0;
}

div.threadview div.lensmenu a
{
    font-weight: bold;

    display: inline-block;

    margin-right: 2px;
    margin-left: 2px;

    vertical-align: middle;
    text-decoration: none;

    color: #444;
}

div.note-lens-unabridged
{
    color: #a0a0a0;
}

div.threadview span.empty_comment
{
    font-weight: bold;
    font-variant: small-caps;

    padding: 3px;

    color: #a0a0a0;
    border: thin solid #a0a0a0;
    -webkit-border-radius: 10px;
       -moz-border-radius: 10px;
    background-color: #f0f0f0;
}

span.n_star,
span.n_question
{
    font-size: large;

    padding: 0 3px;

    color: #707070;
}

#thread_request_reply
{
    color: #707070;
}

button.mark-toggle
{
    /*margin-right: 10px;*/
    font-size: large;

    width: 30px;
    margin: 0 5px;
    padding: 0 5px;
}

div.threadview-header
{
    min-height: 24px;
    padding: 5px 0px 3px 0px;
    border-bottom: 1px solid #eee;
    border-top: 5px solid #efebe7;
    background-color: #fff;
}

div.threadview-filter-controls .nbicon
{
    margin-bottom: -4px;
}

button.mark-toggle.active
{
    border-bottom: 5px solid #ff0;
}

.context-menu-item.icon
{
    position: relative;
}

.context-menu-item.icon:before
{
    position: absolute;
    z-index: 0;
    top: 0;
    left: 1px;

    width: 18px;
    height: 18px;

    content: '';

    background-image: url('/content/data/icons/png/theme_dark.png');
    background-repeat: no-repeat;
}

.context-menu-item.icon.hover:before
{
    background-image: url('/content/data/icons/png/theme_light.png');
}

.context-menu-item.icon.icon-reply:before
{
    background-position: -300px 0;
}

.context-menu-item.icon.icon-thanks:before
{
    background-position: -280px 0;
}

.context-menu-item.icon.icon-edit:before
{
    background-position: -320px 0;
}

.context-menu-item.icon.icon-question:before
{
    background-position: -180px 0;
}

.context-menu-item.icon.icon-noquestion:before
{
    background-position: -260px 0;
}

.context-menu-item.icon.icon-star:before
{
    background-position: -160px 0;
}

.context-menu-item.icon.icon-nostar:before
{
    background-position: -240px 0;
}

.context-menu-item.icon.icon-delete:before
{
    background-position: -339px 1px;
}

.threadview-header-sectioninfo
{
    font-size: large;

    position: absolute;
    right: 20px;

    overflow: hidden;

    max-width: 100px;

    color: #707070;
}

div.threadview-pane .note-body {
  height: 20px;
  margin-right: 5px;
  overflow: hidden;
  display: block;
}

div.threadview-pane p,
div.threadview-pane ul,
div.threadview-pane pre,
div.threadview-pane xmp,
div.threadview-pane plaintext,
div.threadview-pane listing {
  margin: 2px;
}

div.threadview-pane ul {
  padding-left: 15px;
}

div.threadview-pane span.empty_comment {
  font-weight: 700;
  font-variant: normal;
  padding: 1px 7px;
  font-size: 0.8em;
}

